# gault

./: .gitignore  LICENSE  README.md  compose.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  tests.yml
docs/: index.md
docs/explanation/: index.md  persistence-and-state.md  pipeline-architecture.md  schema-vs-model.md
docs/how-to/: filter-documents.md  index.md  paginate-results.md  track-dirty-fields.md  use-aggregation-pipelines.md  use-field-expressions.md
docs/reference/: accumulators.md  exceptions.md  expressions.md  index.md  manager.md  pipeline.md  predicates.md  schema-and-model.md
docs/stylesheets/: extra.css
docs/tutorials/: building-pipelines.md  first-schema.md  index.md
src/gault/: __init__.py  accumulators.py  compilers.py  exceptions.py  expressions.py  geo.py  inout.py  interfaces.py  managers.py  mappers.py  models.py  pipelines.py  predicates.py  sorting.py  types.py  utils.py  window_aggregators.py
src/mongo_odm/: __init__.py  accumulators.py  exceptions.py  managers.py  mappers.py  models.py  pipelines.py  types.py
src/strata/: __init__.py  accumulators.py  compilers.py  exceptions.py  expressions.py  fields.py  geo.py  managers.py  mappers.py  models.py  operators.py  pipelines.py  predicates.py  sorting.py  types.py  utils.py  window_aggregators.py
tests/: accumulators_test.py  attribute_spec_test.py  conftest.py  geo_test.py  manager_test.py  mapper_test.py  odm_test.py  operators_test.py  persistence_test.py  pipeline_in_context_test.py  pipeline_straight_test.py  pipeline_test.py  projection_test.py  ruff.toml  shapes_test.py  state_tracking_test.py
tests/asynchronous/: conftest.py  manager_test.py  test_bulk_ops.py  test_manager_coverage.py
tests/asynchronous copy/: conftest.py
tests/coverage/: test_compilers.py  test_exceptions.py  test_expressions_coverage.py  test_geo_coverage.py  test_interfaces.py  test_models_coverage.py  test_pipelines_coverage.py  test_predicates_coverage.py  test_search_pipeline.py  test_shapes_coverage.py  test_sorting_coverage.py  test_window_coverage.py
tests/expressions/: IndexOfArray_test.py  IndexOfCP_test.py  IsoWeek_test.py  abs_test.py  acos_test.py  acosh_test.py  add_test.py  allElementsTrue_test.py  and_test.py  anyElementsTrue_test.py  arrayElemAt_test.py  arrayToObject_test.py  asin_test.py  asinh_test.py  atan2_test.py  atan_test.py  atanh_test.py  binarySize_test.py  bitAnd_test.py  bitNot_test.py  bitOr_test.py  bitXor_test.py  bsonSize_test.py  ceil_test.py  cmp_test.py  composition_test.py  concatArrays_test.py  concat_test.py  cond_test.py  conftest.py  cos_test.py  cosh_test.py  dateAdd_test.py  dateDiff_test.py  dateFromParts_test.py  dateFromString_test.py  dateSubtract_test.py  dateToParts_test.py  dateToString_test.py  dateTrunc_test.py  (+105 more)
tests/pipeline/: bucketAuto_test.py  bucket_test.py  build_test.py  count_test.py  documents_test.py  facet_test.py  graphLookup_test.py  group_test.py  lookup_test.py  match_test.py  pipe_test.py  project_test.py  raw_test.py  replaceWith_test.py  sample_test.py  setField_test.py  setWindowFields_test.py  set_test.py  skip_test.py  sort_test.py  take_test.py  unionWith_test.py  unset_test.py  unwind_test.py
tests/predicates/: and_test.py  begin_test.py  bitsAllClear_test.py  bitsAllSet_test.py  bitsAnyClear_test.py  bitsAnySet_test.py  elemMatch_test.py  eq_test.py  exists_test.py  expr_test.py  field_test.py  geoIntersects_test.py  geoWithin_test.py  gt_test.py  gte_test.py  in_test.py  jsonSchema_test.py  lt_test.py  lte_test.py  mod_test.py  ne_test.py  nearSphere_test.py  near_test.py  nin_test.py  nor_test.py  not_test.py  or_test.py  query_test.py  regex_test.py  size_test.py  type_test.py
tests/synchronous/: conftest.py  manager_test.py  test_bulk_ops.py  test_manager_coverage.py
tests/window_aggregators/: addToSet_test.py  avg_test.py  bottomN_test.py  bottom_test.py  concatArrays_test.py  count_test.py  covariancePop_test.py  covarianceSamp_test.py  denseRank_test.py  derivative_test.py  documentNumber_test.py  expMovingAvg_test.py  firstN_test.py  first_test.py  integral_test.py  lastN_test.py  last_test.py  linearFill_test.py  locf_test.py  maxN_test.py  max_test.py  median_test.py  minMaxScaler_test.py  minN_test.py  min_test.py  percentile_test.py  push_test.py  rank_test.py  setUnion_test.py  shift_test.py  stdDevPop_test.py  stdDevSamp_test.py  sum_test.py  topN_test.py  top_test.py
