[project]
name = "gault"
version = "0.3.0"
description = "A lightweight Object Document Mapper for MongoDB"
readme = "README.md"
authors = [{ name = "Xavier Barbosa", email = "clint.northwood@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["annotated-types>=0.6.0", "pymongo>=4.15.4"]
keywords = ["mongodb", "odm", "document-mapper", "orm", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-subtests>=0.15.0",
    "ruff>=0.14.6",
]

[project.urls]
Homepage = "https://github.com/johnoone/gault"
Repository = "https://github.com/johnoone/gault.git"
Issues = "https://github.com/johnoone/gault/issues"

[tool.pytest.ini_options]
anyio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
pylint.max-args = 8
extend-select = ["ALL"]
extend-ignore = [
    "A001",
    "A002",
    "ARG001",
    "ARG002",
    "ANN401",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "E501",
    "F402",
    "FBT003",
    "N818",
    "PLR2004",
    "SIM108",
]
