[project]
name = "gault"
version = "0.13.0"
description = "A lightweight Object Document Mapper for MongoDB"
readme = "README.md"
license = "MIT"
authors = [{ name = "Xavier Barbosa", email = "clint.northwood@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["annotated-types>=0.6.0", "pymongo>=4.15.4"]
keywords = ["mongodb", "odm", "document-mapper", "orm", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/johnnoone/gault"
Documentation = "https://johnnoone.github.io/gault/"
Repository = "https://github.com/johnnoone/gault.git"
Issues = "https://github.com/johnnoone/gault/issues"

[build-system]
requires = ["uv_build>=0.9.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-subtests>=0.15.0",
    "ruff>=0.14.6",
    "testcontainers[mongodb]>=4.10.0",
    "zensical>=0.0.28",
]

[tool.pytest.ini_options]
anyio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
pylint.max-args = 8
extend-select = ["ALL"]
extend-ignore = [
    "A001",
    "A002",
    "ARG001",
    "ARG002",
    "ANN401",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "E501",
    "F402",
    "FBT003",
    "N818",
    "PLR2004",
    "SIM108",
    "UP013",
]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
local_partial_types = true
check_untyped_defs = true
strict_equality = true
disallow_untyped_defs = true
# strict = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true
